--- a/Source/QuanLyBanHang/QuanLyBanHang/GUI/Common/frmBase.resx
+++ b/Source/QuanLyBanHang/QuanLyBanHang/GUI/Common/frmBase.resx
@@ -1545,4 +1545,7 @@
   <metadata name="popGridMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>118, 17</value>
   </metadata>
+  <metadata name="alertMsg.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>246, 17</value>
+  </metadata>
 </root>
