--- a/Source/QuanLyBanHang/QuanLyBanHang/GUI/NhapHang/frmNhapHangNhaCungCap.resx
+++ b/Source/QuanLyBanHang/QuanLyBanHang/GUI/NhapHang/frmNhapHangNhaCungCap.resx
@@ -120,4 +120,10 @@
   <metadata name="popGridMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="eNhapHangNhaCungCapChiTietBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>425, 17</value>
+  </metadata>
+  <metadata name="eTonKhoBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>246, 17</value>
+  </metadata>
 </root>
